<resources>
    <string name="app_name">Shopping List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_shoppinglist">Shopping List</string>
    <string name="navigation_templates">Templates</string>
    <string name="navigation_purchase_history">Purchase History</string>
    <string name="navigation_settings">Settings</string>

    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="title_activity_navigation">Shopping List</string>

    <string name="title_button_add_new_shop">Add new shop</string>
    <string name="title_button_add_new_product">Add new product</string>
    <string name="title_button_add_new_template">Add new template</string>
    <string name="title_button_cancel">Cancel</string>

    <string name="shop_name">Shop name</string>
    <string name="add_shop">Add Shop</string>
    <string name="shop_address">Shop address</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_name">Product name</string>
    <string name="add_product_description">Description</string>
    <string name="add_product_amount">Amount</string>
    <string name="add_product_shop">Shop</string>
    <string name="add_product_duedate">Due date</string>
    <string name="add_product_picture">Add picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="deleteShopMessageContainingItems1">"Do you really want to delete that shop? It still contains "</string>
    <string name="deleteShopMessageContainingItems2">" unbought items."</string>
    <string name="deleteShopMessage">Do you really want to delete this shop?</string>
    <string name="deleteTemplateMessage">Do you really want to delete this template?</string>
    <string name="deleteTemplateItemMessage">Do you really want to delete this template item?</string>
    <string name="navigation_template">Template</string>
    <string name="template_name">Template name</string>
    <string name="add_template">Add Template</string>

    <string name="details_for_shop">Details for shop</string>
    <string name="deleteProductMessage">Do you really want to delete this product?</string>

    <string name="add_template_item_name">Name</string>
    <string name="add_template_item_amount">Amount</string>
    <string name="add_template_item_description">Description</string>
    <string name="add_template_item">Add Entry</string>
    <string name="title_button_add_new_template_item">Add new Item</string>
    <string name="finishPurchase">Finish purchase</string>
    <string name="total">Total</string>
    <string name="edit">Edit</string>
    <string name="editProductMessage">Edit product</string>
    <string name="shareApp">Share App</string>

</resources>
