<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shoppinglist"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/navigation_shoppinglist" />
        <item
            android:id="@+id/nav_standardlist"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/navigation_templates" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/navigation_purchase_history" />
        <item
            android:id="@+id/nav_sendinvite"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/shareApp" />

    </group>

    <item android:title="@string/navigation_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navigation_settings" />
        </menu>
    </item>

</menu>
