<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.fhv.mobilecomputing.fragments.Shop.AddShop">

    <TextView
        android:id="@+id/ShopNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/shop_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/ShopNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/ShopAddressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/shop_address"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/ShopAddressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/buttonAddShop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_shop"
        android:textColor="@android:color/black"
        android:visibility="visible" />

</LinearLayout>
